--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -171,23 +171,22 @@ main{
    padding: 1rem;
 }
 form{
-    width: 20%;
-    height: 60vh;
-
+    width: 60%;
+    display: flex;
     flex-direction: column;
     border-radius: 1rem;
-    background-color:rgba(219,240,220,1) ;
+    padding: 0.5rem;
  }
  .formulario{
-    width: 50%;
-    height: 60vh;
+    width: 60%;
+    height: 70vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
  }
  .img-r2{
     overflow: hidden;
      width: 60%;
-     height: 60vh;
+     height: 70vh;
      display: flex;
     flex-direction: column;
      align-items: center;
@@ -195,11 +194,10 @@ form{
      object-fit: cover; 
  }
 .img-r{
-    
-    width: 80%;
+    width: 60%;
  }
 input, option{
-    width:80%;
+    width:100%;
 }
 label{
     width: 80%;
